--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coastal Beats Karaoke Requests</title>
+    <title>Coastal Beats Karaoke Library</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -98570,4 +98570,5 @@
     </script>
 </body>
 </html>
+
 
