--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <body>
     <div class="header">
         <img src="https://images.squarespace-cdn.com/content/v1/5d33ac7c37963a000108639e/984f9850-0f3e-43aa-937e-ba67905156d0/Coastal+Beats+2022.png" alt="Coastal Beats Logo">
-        <h1>Coastal Beats Jukebox - Karaoke Library</h1>
+        <h1>Coastal Beats Karaoke Library</h1>
     </div>
     <div class="search-container">
         <input type="text" id="search-input" placeholder="Search...">
@@ -98570,5 +98570,6 @@
     </script>
 </body>
 </html>
+
 
 
